--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
     "oxlint": "^0.16.0",
+    "postcss-px-to-viewport-8-plugin": "^1.2.5",
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
