--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-oxlint": "^0.16.0",
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
+    "less": "^4.3.0",
     "npm-run-all2": "^7.0.2",
     "oxlint": "^0.16.0",
     "postcss-px-to-viewport-8-plugin": "^1.2.5",
