--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^13.1.0",
     "pinia": "^3.0.1",
     "vant": "^4.9.19",
     "vue": "^3.5.13",
