--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vueuse/core": "^13.1.0",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
+    "postcss-mobile-forever": "^5.0.0",
     "vant": "^4.9.19",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -37,7 +38,6 @@
     "less": "^4.3.0",
     "npm-run-all2": "^7.0.2",
     "oxlint": "^0.16.0",
-    "postcss-px-to-viewport-8-plugin": "^1.2.5",
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
