--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss-mobile-forever": "^5.0.0",
     "vant": "^4.9.19",
     "vue": "^3.5.13",
+    "vue-i18n": "^11.1.4",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
